# xtea-cipher

./: Cargo.toml  README.md
src/: bytes.rs  lib.rs
