[package]
name = "xtea-cipher"
version = "1.0.0"
edition = "2021"
rust-version = "1.60"
description = "A minimal, zero-dependency XTEA block (de)cipher utility."
authors = ["Mack <github.com/heavens>"]
keywords = ["cryptography", "block cipher", "io"]
readme = "README.md"
license = "MIT"

[dependencies]