[package]
name = "xtea-cipher"
version = "0.0.1"
edition = "2021"
rust-version = "1.60"
description = "A minimal, zero-dependency XTEA block (de)cipher utility."
authors = ["Mack <github.com/heavens>"]
keywords = ["cryptography", "cipher", "io"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/heavens/xtea-cipher"